Chrome/Safari bug fix. Now, the selection is done by changing the z-index of the svg used for the selection

--- a/app/game/styles/game.scss
+++ b/app/game/styles/game.scss
@@ -12,12 +12,23 @@
     -webkit-transition: 2s;
     transition: 2s;
 
-    svg{
-      width: 100%;
-      height: 100%;
+    .container{
+      position: absolute;
+      top: 0px;
+      z-index:0;
+
+      &.selected {
+        z-index:1;
+      }
+
+      svg{
+        width: 100%;
+        height: 100%;
+      }
     }
 
     .letter {
+      z-index:2;
       pointer-events: none;
       position: absolute;
       top: 10px;
@@ -27,5 +38,6 @@
       font: 2rem FuturaStd-Bold;
       text-transform: capitalize;
     }
+
   }
 }
